--- a/styles/songs.module.css
+++ b/styles/songs.module.css
@@ -211,6 +211,7 @@ div.bodyA {
 /*THREADS */
 .headerContainer {
 	display: flex;
+	margin: 12px 0 0 0;
 }
 @media (max-width: 1200px) {
 	.headerContainer {
